# vultr_ddns

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  publish-docker-images.yml  publish-release.yml  publish-version.yml
src/: main.rs
