[package]
name = "vultr_ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
